--- a/2_class_PCA.ipynb
+++ b/2_class_PCA.ipynb
@@ -1103,17 +1103,14 @@
       },
       "source": [
         "#Importing required modules\n",
-        " \n",
-        "from sklearn.datasets import load_digits\n",
         "from sklearn.decomposition import PCA\n",
         "from sklearn.cluster import KMeans\n",
         "import numpy as np\n",
         " \n",
         "#Load Data\n",
-        "# data = load_digits().data\n",
         "data=pattern_matrix_training\n",
         "pca = PCA(2)\n",
-        " \n",
+        "\n",
         "#Transform the data\n",
         "df = pca.fit_transform(data)\n",
         " \n",
@@ -1168,6 +1165,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mEtZ1Ej2b-rE"
+      },
+      "source": [
+        "Plot for Label 0 "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1202,6 +1208,15 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s04sFwvccCOe"
+      },
+      "source": [
+        "Plot for label 1"
       ]
     },
     {
@@ -1242,6 +1257,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AR-Xfh8WcPg0"
+      },
+      "source": [
+        "Plot for label 0 and label 1"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1249,20 +1273,19 @@
           "height": 265
         },
         "id": "KycPWYoSV8Hp",
-        "outputId": "bd892b75-161b-4a24-c301-0307846cbebb"
+        "outputId": "c2758cfb-504a-4b1b-becd-af2c746d54c8"
       },
       "source": [
         "#filter rows of original data\n",
-        "filtered_label2 = df[label == 0]\n",
-        " \n",
-        "filtered_label8 = df[label == 1]\n",
+        "filtered_label0 = df[label == 0] \n",
+        "filtered_label1 = df[label == 1]\n",
         " \n",
         "#Plotting the results\n",
-        "plt.scatter(filtered_label2[:,0] , filtered_label2[:,1] , color = 'red')\n",
-        "plt.scatter(filtered_label8[:,0] , filtered_label8[:,1] , color = 'black')\n",
+        "plt.scatter(filtered_label0[:,0] , filtered_label2[:,1] , color = 'red')\n",
+        "plt.scatter(filtered_label1[:,0] , filtered_label8[:,1] , color = 'black')\n",
         "plt.show()"
       ],
-      "execution_count": 27,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1277,6 +1300,15 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MjFxnzcPcWpN"
+      },
+      "source": [
+        "Plot with centroids"
       ]
     },
     {
